--- a/app/composer.json
+++ b/app/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "slim/slim": "^3.0",
         "slim/php-view": "^2.0",
-        "slim/twig-view": "^2.2"
+        "slim/twig-view": "^2.2",
+        "google/apiclient": "2.0"
     }
 }
