--- a/app/public_html/.htaccess
+++ b/app/public_html/.htaccess
@@ -1,3 +1,6 @@
+#This file is essential for Slim Framework to function.
+#PHP 7 is required and we must have the RewriteRule.
+
 RewriteEngine On
 AddHandler application/x-httpd-php70 .php
 RewriteCond %{REQUEST_FILENAME} !-f
